feat: Add QR scanner, attendance system, service access gates, reports & notifications
- QR Camera Scanner: html5-qrcode integration with camera switching
- Attendance System: Lecture sessions, student check-in/out, operator management
- Service Access Gates: Entry/exit tracking, capacity management, real-time occupancy
- Reports & Analytics: Date filters, charts, CSV/PDF export
- Real-time Notifications: Polling events, browser notifications, NotificationCenter
- PWA Enhancement: Service worker, offline page, manifest updates
- Student Profile: Profile management page with API

--- a/public/offline.html
+++ b/public/offline.html
@@ -3,63 +3,155 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Offline - TASUED BioVault</title>
+  <meta name="theme-color" content="#2563eb">
+  <title>Offline - BioVault</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);
+      background: linear-gradient(135deg, #eff6ff 0%, #ffffff 50%, #f0fdf4 100%);
       min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      padding: 1rem;
+      padding: 20px;
     }
     .container {
       text-align: center;
       max-width: 400px;
-      background: white;
-      padding: 3rem 2rem;
-      border-radius: 1.5rem;
-      box-shadow: 0 10px 30px -5px rgba(0,0,0,0.1);
     }
     .icon {
       width: 80px;
       height: 80px;
-      background: #fef3c7;
+      background: #fee2e2;
       border-radius: 50%;
       display: flex;
       align-items: center;
       justify-content: center;
-      margin: 0 auto 1.5rem;
+      margin: 0 auto 24px;
     }
-    .icon svg { width: 40px; height: 40px; color: #f59e0b; }
-    h1 { color: #0f172a; font-size: 1.5rem; margin-bottom: 0.5rem; }
-    p { color: #64748b; margin-bottom: 1.5rem; line-height: 1.6; }
+    .icon svg {
+      width: 40px;
+      height: 40px;
+      color: #dc2626;
+    }
+    h1 {
+      font-size: 24px;
+      color: #111827;
+      margin-bottom: 12px;
+    }
+    p {
+      color: #6b7280;
+      margin-bottom: 24px;
+      line-height: 1.5;
+    }
     .btn {
-      display: inline-block;
-      background: linear-gradient(135deg, #0066CC 0%, #003d7a 100%);
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      padding: 12px 24px;
+      background: #2563eb;
       color: white;
-      padding: 0.875rem 2rem;
-      border-radius: 0.75rem;
-      text-decoration: none;
-      font-weight: 600;
-      transition: transform 0.2s, box-shadow 0.2s;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      font-weight: 500;
+      cursor: pointer;
+      transition: background 0.2s;
     }
-    .btn:hover { transform: translateY(-2px); box-shadow: 0 4px 14px rgba(0,102,204,0.4); }
-    .btn:active { transform: scale(0.98); }
+    .btn:hover {
+      background: #1d4ed8;
+    }
+    .status {
+      margin-top: 24px;
+      padding: 12px;
+      background: #fef3c7;
+      border-radius: 8px;
+      font-size: 14px;
+      color: #92400e;
+    }
+    .logo {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 12px;
+      margin-bottom: 32px;
+    }
+    .logo-icon {
+      width: 48px;
+      height: 48px;
+      background: #2563eb;
+      border-radius: 12px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .logo-icon svg {
+      width: 28px;
+      height: 28px;
+      color: white;
+    }
+    .logo-text {
+      font-size: 24px;
+      font-weight: 700;
+      color: #111827;
+    }
   </style>
 </head>
 <body>
   <div class="container">
+    <div class="logo">
+      <div class="logo-icon">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 11c0 3.517-1.009 6.799-2.753 9.571m-3.44-2.04l.054-.09A13.916 13.916 0 008 11a4 4 0 118 0c0 1.017-.07 2.019-.203 3m-2.118 6.844A21.88 21.88 0 0015.171 17m3.839 1.132c.645-2.266.99-4.659.99-7.132A8 8 0 008 4.07M3 15.364c.64-1.319 1-2.8 1-4.364 0-1.457.39-2.823 1.07-4" />
+        </svg>
+      </div>
+      <span class="logo-text">BioVault</span>
+    </div>
+
     <div class="icon">
-      <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18.364 5.636a9 9 0 010 12.728m0 0l-2.829-2.829m2.829 2.829L21 21M15.536 8.464a5 5 0 010 7.072m0 0l-2.829-2.829m-4.243 2.829a4.978 4.978 0 01-1.414-2.83m-1.414 5.658a9 9 0 01-2.167-9.238m7.824 2.167a1 1 0 111.414 1.414m-1.414-1.414L3 3m8.293 8.293l1.414 1.414"/>
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18.364 5.636a9 9 0 010 12.728m0 0l-2.829-2.829m2.829 2.829L21 21M15.536 8.464a5 5 0 010 7.072m0 0l-2.829-2.829m-4.243 2.829a4.978 4.978 0 01-1.414-2.83m-1.414 5.658a9 9 0 01-2.167-9.238m7.824 2.167a1 1 0 111.414 1.414m-1.414-1.414L3 3m8.293 8.293l1.414 1.414" />
       </svg>
     </div>
+
     <h1>You're Offline</h1>
-    <p>It looks like you've lost your internet connection. Please check your connection and try again.</p>
-    <a href="/" class="btn" onclick="window.location.reload(); return false;">Try Again</a>
+    <p>It looks like you've lost your internet connection. Some features may not be available until you're back online.</p>
+
+    <button class="btn" onclick="window.location.reload()">
+      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15" />
+      </svg>
+      Try Again
+    </button>
+
+    <div class="status" id="status">
+      Checking connection...
+    </div>
   </div>
+
+  <script>
+    function checkConnection() {
+      const status = document.getElementById('status');
+      if (navigator.onLine) {
+        status.textContent = 'Connection restored! Reloading...';
+        status.style.background = '#d1fae5';
+        status.style.color = '#065f46';
+        setTimeout(() => window.location.reload(), 1000);
+      } else {
+        status.textContent = 'Still offline. Your data will sync when connected.';
+      }
+    }
+
+    window.addEventListener('online', checkConnection);
+    window.addEventListener('offline', checkConnection);
+    
+    // Initial check
+    setTimeout(checkConnection, 1000);
+  </script>
 </body>
 </html>
